# webui

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  auth.py  detect.py  main.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  release.yml
static/: index.html
tests/: conftest.py  test_api.py  test_auth.py
